# oq

./: .gitignore  AGENTS.md  README.md  dune-project  implementation_plan.md  oq.opam
.github/workflows/: ci.yml  release.yml
bench/: benchmark_check.ml  dune
docs/: PRD-oq-v1.md  agent-contract.md  agent-playbook.md  ci-gates.md  gh-operations.md  org-mode-syntax-quick-reference.md  org-parser-supported-constructs.md  performance-notes.md  release-flow.md
lib/: dune  oq.ml
scripts/release/: package_assets.sh  verify_packaged_assets.sh
skills/oq/: SKILL.md
skills/oq-org-query/: SKILL.md
test/: agent_workflow_scenarios.ml  contract_smoke.ml  diagnostic_golden.ml  directory_mode.ml  dune  fixture_corpus.ml  org_parser_indexing.ml  query_evaluator_core.ml  query_evaluator_org_enrichments.ml  query_parser.ml  smoke.ml
test/fixtures/corpus/: blocks_links_tables.org  duplicate_headings.org  properties_drawers.org  todo_workflows.org
test/golden/: ambiguity_error.txt  evaluator_core_errors.txt  evaluator_core_queries.txt  parse_warning.txt
