opam-version: "2.0"
synopsis: "Agent-first org query CLI"
description: "oq is a deterministic query CLI for Org files optimized for agent workflows."
maintainer: ["Sergey Kostyaev"]
authors: ["Sergey Kostyaev"]
license: "MIT"
homepage: "https://github.com/s-kostyaev/oq"
bug-reports: "https://github.com/s-kostyaev/oq/issues"
dev-repo: "git+https://github.com/s-kostyaev/oq.git"
depends: [
  "ocaml" {>= "5.1"}
  "dune" {>= "3.14"}
  "base"
  "core"
  "core_unix"
  "stdio"
  "ppx_jane"
  "cmdliner" {>= "2.1.0"}
  "re2"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
